<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignIn"
    android:layout_gravity="center"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_signin_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/authentication_screen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_up_description_text"
            android:textColor="@color/Gray_Cloud"
            android:textSize="@dimen/authentication_description_textsize"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_screen_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_screen_card_view_marginTop"
            android:elevation="@dimen/card_view_elevation"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_view_layout_content_padding">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_till_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_till_marginStartEnd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ets_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_text_size"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authentication_screen_till_marginStartEnd"
                    android:layout_marginEnd="@dimen/authentication_screen_till_marginStartEnd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ets_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/et_text_size"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/intro_btn_margin_startend"
                    android:layout_marginTop="@dimen/sign_up_screen_btn_margin_top"
                    android:layout_marginEnd="@dimen/intro_btn_margin_startend"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/intro_btn_padding_top_bottom"
                    android:paddingBottom="@dimen/intro_btn_padding_top_bottom"
                    android:text="@string/sign_in"
                    android:textSize="@dimen/btn_text_size" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>